@@ -27,6 +27,8 @@ New in v0.7.11 (2016/09/??)
     of a dynamic internet connection).
 * Merged in lp:~ed.so/duplicity/manpage.fixes
   - Fix html output via rman on the website
+* Merged in lp:~horgh/duplicity/copy-symlink-targets-721599
+  - Add --copy-links to copy symlink contents, not just the link itself.
 
 
 New in v0.7.10 (2016/08/20)
